src/styles/hero.scss
#particles-js canvas {
  display: block;
  background: #060d1b;
  position: fixed;
  z-index: -1;
}

#particles-js {
  width: 100%;
  height: 100%;
  position: fixed;
  z-index: -10;
  top: 0;
  left: 0;
}

main {
  display: flex;
  align-items: center;
  padding: 14rem 10rem;
  width: 100%;

  .hello {
    color: #237186;
    font-weight: 300;
    font-size: 1.6rem;
  }

  .first-name,
  .last-name {
    font-size: 7rem;
    white-space: pre-line;
    text-wrap: break-word;
    line-height: 2.5rem;
    margin-top: 3rem;
  }

  .title {
    color: #acb3c0;
    font-weight: 300;
    font-size: 1.8rem;
  }

  button {
    margin-top: 20px;
  }

  .profile-picture {
    width: 250px;
    height: 250px;
    border-radius: 250px;
    margin-left: 10rem;
  }
}

